# musa

./: README.md  index.html  package.json  plan.txt  tsconfig.json  vite.config.ts
src/: App.vue  icon-types.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/music/: mod.rs
src-tauri/src/player/: mod.rs
src/api/: music.ts
src/app/: index.ts  titlebar.ts  tray.ts
src/components/file/: SelectPath.vue
src/components/music/: MusicAction.vue  MusicCard.vue  MusicItem.vue  MusicList.vue
src/components/playlist/: PlaylistAction.vue  PlaylistItem.vue  PlaylistList.vue
src/components/ui/: Icon.vue  Tooltip.vue  button.vue  input-button.vue  input.vue  sidebar-toggle.vue  timeline.vue  volume-controll.vue
src/components/ui/icons/: Play.vue
src/const/: image.ts  url.ts
src/locales/: en.json  index.ts  ru.json
src/stores/: layout.ts  musa.ts  settings.ts
src/styles/: base.css  ui.css
src/types/: music.ts  playlist.ts
src/utils/: color.ts  icons.ts  random.ts  time.ts  url.ts
src/widgets/layout/: Main.vue  Sidebar.vue
src/widgets/music/: MiniPlayer.vue  Player.vue
src/widgets/settings/: Settings.vue
