[package]
name = "musa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "musa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "tray-icon", "image-png" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
dirs = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
lofty = "0.3.2"
rodio = "=0.21.1"
tokio = "1.47.1"
minimp3 = "0.6.1"
rayon = "1.11.0"
symphonia = "0.5.4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
once_cell = "1.21.3"
base64 = "0.22.1"
cpal = "0.16.0"
thiserror = "1.0"

[profile.dev]
incremental = true

[profile.release]
lto = true
opt-level = "s" 
panic = "abort" 
strip = true 
